--- a/Bootstap.html
+++ b/Bootstap.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Bootstap.html">DCode</a>
+            <a class="navbar-brand" href="/ProDCoder/Bootstap.html">DCode</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -28,10 +28,10 @@
                         <a class="nav-link active" href="Bootstap.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="/about.html">About</a>
+                        <a class="nav-link " href="/ProDCoder/about.html">About</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="/contact.html">Contact</a>
+                        <a class="nav-link " href="/ProDCoder/contact.html">Contact</a>
                     </li>
 
                 </ul>
