--- a/about.html
+++ b/about.html
@@ -24,16 +24,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="Bootstap.html">Home <span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="Bootstap.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="/contact.html">Contact</a>
+                        <a class="nav-link " href="/ProDCoder/about.html">About</a>
                     </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="/ProDCoder/contact.html">Contact</a>
+                    </li>
+
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
