--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="Bootstap.html">Home <span class="sr-only"></span></a>
+                        <a class="nav-link active" href="Bootstap.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="/about.html">About</a>
+                        <a class="nav-link " href="/ProDCoder/about.html">About</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="/contact.html">Contact</a>
+                        <a class="nav-link " href="/ProDCoder/contact.html">Contact</a>
                     </li>
-                    
 
                 </ul>
                 <form class="d-flex">
